# CppAlgo

./: .gitignore  README.md
BasicOpenmp/: CMakeLists.txt  naive_impl.cpp
